--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ google-adk>=1.20.0
 google-genai>=1.51.0
 litellm>=1.80.9
 python-dotenv
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
