Fix OpenNyAI auto-download and update Gliner to medium model
- Implemented auto-download for OpenNyAI model from HuggingFace (opennyaiorg/en_legal_ner_trf)
- Changed GLiNER model from large to medium version (urchade/gliner_medium-v2.1)
- Added huggingface_hub dependency for auto-download functionality
- Updated .gitignore to exclude test files and generated outputs
- Added PROJECT_ANALYSIS.md documentation
- Added ClauseHunter subagents (Gliner, LexNLP, OpenNyAI, RAG)

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,15 @@ logs/
 *.tmp
 *.temp
 .cache/
+
+# Test files
+test_*.py
+
+# Generated/Output files
+*_old.json
+dynamic_playbook.json
+compliance_updates.json
+risk_audit_report.md
+
+# Analysis/documentation (optional - uncomment if you don't want to commit)
+# PROJECT_ANALYSIS.md
