--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ google-genai>=1.51.0
 litellm>=1.80.9
 python-dotenv
 huggingface_hub>=0.20.0
+httpx>=0.24.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+fastapi[standard]
